name:                dson
version:             0.3.0.1
synopsis:            Haskell Doge Serialized Object Notation Parser
description:         A simple parser for Doge Serialized Object Notation
homepage:            https://github.com/lcycon/hs-dson
license:             GPL-3
license-file:        LICENSE
author:              Luke Cycon
maintainer:          luke@lukecycon.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.DSON.Parse
  build-depends:       base >=4.6
                     , parsec
  default-language:    Haskell2010
